# ezplot

./: LICENSE  README.md  RELEASING.md  pyproject.toml  release.sh
src/ezplot/: __init__.py  core.py  patch.py
