[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easyplots"
version = "0.2.2"
description = "Interactive plotting toolkit for time-series and HFT data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Chauncey Dong" },
]
keywords = ["plotting", "plotly", "time-series", "hft", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "plotly>=5.0",
    "pandas>=1.3",
    "numpy>=1.20",
    "scikit-learn>=1.0",
    "nbformat>=4.2.0",
]

[project.urls]
Homepage = "https://github.com/ChaunceyDong/ezplot"

[tool.hatch.build.targets.wheel]
packages = ["src/ezplot"]
